tests/should_succeed/const_enum_count.jou
import "stdlib/io.jou"

enum FooBar:
    Foo
    Bar

const N: int = enum_count(FooBar)

def main() -> int:
    printf("%d\n", N)  # Output: 2
    return 0
