tests/syntax_error/match_bad_case_parens.jou
enum Foo:
    One
    Two
    Three

def blah(f: Foo) -> None:
    match f:
        case (Foo.One Foo.Two):  # Error: expected a ')', got a variable name 'Foo'
            printf("hi\n")
